# Sandbox_Android

./: README.md
Bacol/: bacol.sh  my-release-key.keystore
CMakeQtAPK/: CMakePresets.json  build.sh
NonGradleAndroid/: build.sh  makefile  my-release-key.keystore
RaspberryRemoteControl/: AndroidManifest.xml  bacol.sh  my-release-key.keystore
android-ndk-without-gradle/: AndroidManifest.xml  CMakeLists.txt  apk_build.cmake  build.sh
android-ndk-without-gradle/source/: main.cpp
android-ndk-without-gradle/source/Data_Struct/inc/: Algorithms.hpp  STLTest.hpp
android-ndk-without-gradle/source/Data_Struct/src/: Algorithms.cpp  STLTest.cpp
android-ndk-without-gradle/source/GRE_Game/inc/: TOEFL.hpp
android-ndk-without-gradle/source/GRE_Game/src/: GRE.cpp  TOEFL.cpp
android-ndk-without-gradle/source/inc/: DataStruct.hpp  GRE.hpp  Logger.hpp  Object.hpp
android-ndk-without-gradle/source/src/: DataStruct.cpp  Object.cpp  Tutorial.cpp
cdroid/: CMakeLists.txt  build.sh
cdroid/inc/: Logger.h  OOBase.h  OOCfg.h  OOCore.h  OODbg.h  OOStd.h  Object.h
cdroid/src/: OODbg.c  Object.c  Tutorial.c  main.c
rawdrawandroid/: Makefile  cnfgtest.apk.idsig
