cmake_minimum_required(VERSION 3.17)
project(hello-world VERSION 1.0.0 LANGUAGES CXX)

if(UMBRELLA)
  include(apk_build.cmake)
  return()
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB JNI "source/inc/*.hpp" "source/src/*.cpp" "source/main.cpp")
include_directories(source/inc)
include_directories($ENV{JAVA_HOME}/include)
include_directories($ENV{JAVA_HOME}/lib)
add_library(hello-world SHARED ${JNI})
target_link_libraries(hello-world PUBLIC log)
install(TARGETS hello-world)
